--- a/containerd.service
+++ b/containerd.service
@@ -16,6 +16,7 @@ LimitNOFILE=1048576
 # in the kernel. We recommend using cgroups to do container-local accounting.
 LimitNPROC=infinity
 LimitCORE=infinity
+TasksMax=infinity
 
 [Install]
 WantedBy=multi-user.target
