--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,9 @@
 [package]
 name = containerd
-url = https://github.com/containerd/containerd/archive/v1.2.9.tar.gz
+url = https://github.com/containerd/containerd/archive/v1.3.0.tar.gz
 archives = 
 giturl = https://github.com/containerd/containerd.git
+domain = 
 
 [autospec]
 # build 32 bit libraries
@@ -17,7 +18,7 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
-# this package is a library compatability package and only ships versioned library files
+# this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
 conservative_flags = false
