--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = containerd
-url = https://github.com/containerd/containerd/archive/v1.6.14/containerd-1.6.14.tar.gz
+url = https://github.com/containerd/containerd/archive/v1.6.15/containerd-1.6.15.tar.gz
 archives = 
 giturl = https://github.com/containerd/containerd.git
 domain = 
@@ -27,6 +27,8 @@ conservative_flags = false
 dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
+# compile full (traditional) debug info
+full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
 # set flags to smallest -02 flags possible
