containerd: Autospec creation for update from version 1.7.0 to version 1.7.2
Akihiro Suda (3):
      go.mod: github.com/opencontainers/runc v1.1.5
      update runc binary to v1.1.5
      snapshots/testsuite: Rename: fix fuse-overlayfs incompatibility

Brad Davidson (1):
      Fix umarshal metrics for CRI server

Danny Canter (5):
      Sandbox: Cleanup shim on Start failure
      Sandbox: Correct/add some fields to Status()
      CRI: Don't always close netConfMonitor channel
      CRI: Make stats respect sandbox's platform
      [release/1.7] Prepare release notes for v1.7.2

Derek McGowan (5):
      Update transfer configuration
      [transfer] avoid setting limiters when max is 0
      Prepare release notes for v1.7.1
      Update ttrpc to v1.2.2
      Fix panic when remote differ returns empty result

Djordje Lukic (1):
      oci: Use WithReadonlyTempMount when adding users/groups

Ed Bartosh (1):
      Get CDI devices from CRI Config.CDIDevices field

Ethan Lowman (1):
      Fix image pulling with Transfer service

Gabriel Adrian Samfira (21):
      Use bind filer for mounts
      Fix layer comparison and enable read-only checks
      Grant needed privileges for snapshotter tests
      Remove unused function
      Update continuity, go-winio and hcsshim
      Ignore ERROR_NOT_FOUND error when removing mount
      Fix go.mod, simplify boolean logic, add logging
      Update continuity
      use t.Fatal if we cannot enable process privileges
      Use DefaultSnapshotter
      Remove escalated privileges
      Add ReadOnly() function
      Skip parent layer options on bind mounts
      Properly mount base layers
      Remove "bind" code path from diff
      Remove bind code path in mount()
      Increase integration test tmieout to 20m
      Make ReadOnly() available on all platforms
      Improve error messages and remove check
      UnmountAll is a no-op for missing mount points
      Update continuity to a tagged version

Henry Wang (1):
      notify readines

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = containerd
-url = https://github.com/containerd/containerd/archive/v1.7.0/containerd-1.7.0.tar.gz
+url = https://github.com/containerd/containerd/archive/v1.7.2/containerd-1.7.2.tar.gz
 archives = 
 giturl = https://github.com/containerd/containerd.git
 domain = 
@@ -19,6 +19,8 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
