containerd: Autospec creation for update from version 1.7.11 to version 1.7.12
Akihiro Suda (4):
      go.mod: dario.cat/mergo v1.0.0
      go.mod: github.com/opencontainers/runtime-spec v1.1.0-rc.2
      go.mod: github.com/.../container-device-interface v0.6.0
      go.mod: github.com/opencontainers/runtime-spec v1.1.0

Anthony Nandaa (1):
      fix(pkg/dialer): minor fix on dialer function for windows

Bjorn Neergaard (1):
      images/archive: use mediatype helpers

Derek McGowan (1):
      Prepare release notes for v1.7.12

Djordje Lukic (1):
      WithAppendAdditionalGroups: better /etc/group handling

Jaroslav Jindrak (2):
      shim: Create pid-file with 0644 permissions
      shim: Create address file with 0644 permissions

Kay Yan (1):
      update runc binary to v1.1.11

Paweł Gronowski (4):
      import/export: Support references to missing content
      export: Copy distribution source labels to manifest annotations
      integration/import-export: Add WithSkipMissing tests
      images/Export: Revert signature change

Samuel Karp (1):
      restart: containerd.io/restart.logpath warning

Sebastiaan van Stijn (5):
      switch back from golang.org/x/sys/execabs to os/exec (go1.19)
      remove remaining uses of golang.org/x/sys/execabs
      vendor: github.com/cncf-tags/container-device-interface v0.6.1
      remove github.com/opencontainers/runc dependency
      update to go1.20.13, test go1.21.6

Wei Fu (1):
      *: enable ARM64 runner

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = containerd
-url = https://github.com/containerd/containerd/archive/v1.7.11/containerd-1.7.11.tar.gz
+url = https://github.com/containerd/containerd/archive/v1.7.12/containerd-1.7.12.tar.gz
 archives = 
 giturl = https://github.com/containerd/containerd.git
 domain = 
@@ -59,6 +59,8 @@ server = false
 skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
+# configure build for apx
+use_apx = true
 # configure build for avx2
 use_avx2 = false
 # configure build for avx512
