--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = containerd
-url = https://github.com/containerd/containerd/archive/v1.7.12/containerd-1.7.12.tar.gz
+url = https://github.com/containerd/containerd/archive/v1.7.13/containerd-1.7.13.tar.gz
 archives = 
 giturl = https://github.com/containerd/containerd.git
 domain = 
@@ -9,6 +9,8 @@ alias =
 [autospec]
 # build 32 bit libraries
 32bit = false
+# allow windows executables (*.exe, *.dll) to be packaged
+allow_exe = false
 # allow package to build with test failures
 allow_test_failures = false
 # unset %build ld_as_needed variable
