--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = containerd
-url = https://github.com/containerd/containerd/archive/v1.7.13/containerd-1.7.13.tar.gz
+url = https://github.com/containerd/containerd/archive/v1.7.18/containerd-1.7.18.tar.gz
 archives = 
 giturl = https://github.com/containerd/containerd.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = false
 
