containerd: Autospec creation for update from version 2.1.0 to version 2.1.1
Akhil Mohan (1):
      update runhcs version to v0.13.0

Chris Henzie (1):
      Update removal version for deprecated registry config fields

Derek McGowan (1):
      Prepare release notes for 2.1.1

Gao Xiang (2):
      erofs-differ: fix EROFS native image support
      docs/snapshotters/erofs.md: a tip for improved performance

Samuel Karp (2):
      .github: mark 2.1 releases as latest
      Revert "perf(applyNaive): avoid walking the tree for each file in the same directory"

Sebastiaan van Stijn (1):
      core/runtime/v2: cleanup shim-cleanup logs

dependabot[bot] (1):
      build(deps): bump github.com/Microsoft/hcsshim

ningmingxiao (1):
      ctr:make sure containerd socket exist before create client

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = containerd
-url = https://github.com/containerd/containerd/archive/v2.1.0/containerd-2.1.0.tar.gz
+url = https://github.com/containerd/containerd/archive/v2.1.1/containerd-2.1.1.tar.gz
 archives = 
 giturl = https://github.com/containerd/containerd.git
 domain = 
@@ -37,6 +37,8 @@ fast-math = false
 full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
+# require license subpackage for successful build
+has_license = true
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
